<resources>
    <string name="app_name">Mercado libre</string>
    <string name="kit_de_actualizacion_gamer_ryzen_5_600g_motherboard_a520m">Kit de Actualizacion Gamer Ryzen 5 600g + Motherboard A520m</string>
    <string name="_3_759">$ 3,759</string>
    <string name="_24x_227">24x $227</string>
    <string name="envio_gratis">Envio gratis</string>
    <string name="cp_50260">CP 50260</string>
    <string name="env_o_gratis">Envío gratis</string>
    <string name="en_millones_de_productos_desde_299">en millones de productos desde $299</string>
    <string name="consigue_envios_gratis_desde_149_con">Consigue envios gratis desde $149 con</string>
    <string name="suma_productos_y_consigue_envio_gratis">Suma productos y consigue envio gratis</string>
    <string name="productos_que_te_interesaron">Productos que te interesaron</string>
    <string name="descubrir_productos">Descubrir productos</string>
    <string name="carrito_de_compras">Carrito de compras</string>
    <string name="empieza_un_carrito_de_compras">¡Empieza un carrito de compras!</string>
    <string name="inspirado_en_lo_ultimo_que_viste">Inspirado en lo ultimo que viste</string>
    <string name="podr_s_ver_costos_y_tiempos_de_entrga_precisos_en_todo_lo_que_busques">Podrás ver costos y tiempos de entrga precisos en todo lo que busques.</string>
    <string name="editar_direcciones">Editar direcciones</string>
    <string name="ingresa_un_codigo_postal">Ingresa un codigo postal</string>
    <string name="elige_d_nde_recibir_tus_compras">Elige dónde recibir tus compras</string>
    <string name="en_una_de_tus_direcciones">En una de tus direcciones.</string>
    <string name="en_otra_ubicaci_n">En otra ubicación</string>
    <string name="aceptar">Aceptar</string>
    <string name="subMeli">"Suscribirme a Mell+</string>
    <string name="consigue_env_os_gratis_pel_culas_series_y_m_sica">Consigue envíos gratis, películas, series y música</string>
    <string name="env_os_gratis">ENVÍOS GRATIS</string>
    <string name="en_millones_de_productos">EN MILLONES DE PRODUCTOS</string>
    <string name="sin_cargo">SIN CARGO</string>
    <string name="sin_cargos">SIN CARGO</string>
    <string name="_12_meses_sin_cargo">12 MESES SIN CARGO</string>
    <string name="mes">/mes</string>
    <string name="tambi_n_puedes_llegar_sumando_puntos">También puedes llegar sumando puntos</string>
    <string name="env_os_gratis_en_millones_de_productos_desde_149">Envíos gratis en millones de productos desde $149</string>
    <string name="adem_s_puedes_elegir_un_dia_de_la_semana_para_resibir_tus_compras_con">Además, puedes elegir un dia de la semana para resibir tus compras con</string>
    <string name="al_suscribirte_aceptas_los">Al suscribirte, aceptas los</string>
    <string name="suscribete_por">Suscribete por</string>
    <string name="t_rminos_y_condiciones_de_meli">Términos y condiciones de Meli+</string>
    <string name="puedes_cancelar_cuando_quieras">Puedes cancelar cuando quieras.</string>
    <string name="meli">Meli+</string>
    <string name="_129">$ 129</string>
    <string name="mas_vendido">MAS VENDIDO</string>
    <string name="_4_7">4.7</string>
    <string name="nuevo_500_vendidos">Nuevo | +500 vendidos</string>
    <string name="iva_incluido">IVA Incluido</string>
    <string name="ver_los_metodos_de_pago">Ver los metodos de pago</string>
    <string name="llega_gratis">Llega gratis</string>
    <string name="el_m_ercoles">el míercoles</string>
    <string name="full">FULL</string>
    <string name="almacenado_y_enviado_por">Almacenado y enviado por</string>
    <string name="stock_disponible">Stock disponible</string>
    <string name="m_s_formas_de_entrega">Más formas de entrega</string>
    <string name="en_12x">En 12x $</string>
    <string name="_3_en_compras_y_ofertas">3° en Compras y ofertas</string>
</resources>