<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".meli_activity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/seed"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/seed"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:onClick="backHome"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/arrowleft" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="17sp"
                android:text="@string/meli"/>

        </LinearLayout>


    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="730dp"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        tools:layout_editor_absoluteX="16dp">
        <LinearLayout
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradientpurlple"
                android:gravity="center"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/pill_meliplus"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/consigue_env_os_gratis_pel_culas_series_y_m_sica"/>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cuadradoadd"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:background="@drawable/marcadolibre"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/env_os_gratis"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/en_millones_de_productos"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cuadradoadd"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="90dp"
                            android:layout_height="30dp"
                            android:background="@drawable/disney_logo"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="10sp"
                            android:text="@string/sin_cargo"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cuadradoadd"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="90dp"
                            android:layout_height="30dp"
                            android:background="@drawable/star_logo"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="10sp"
                            android:text="@string/sin_cargos"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cuadradoadd"
                        android:orientation="vertical"
                        android:padding="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="70dp"
                            android:layout_height="20dp"
                            android:background="@drawable/deezer_logo_dsk"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="10sp"
                            android:text="@string/_12_meses_sin_cargo"
                            android:textAlignment="center"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suscribete_por"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="35sp"
                            android:text="@string/_129"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textSize="20sp"
                            android:text="@string/mes"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/cuadradoadd"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="@color/purpleMeli"
                            android:text="@string/tambi_n_puedes_llegar_sumando_puntos"/>
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_gravity="end"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/materialsymbolslightarrowforwardiosrounded__1_"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="350dp"
                    android:background="@drawable/cuadradoadd"
                    android:orientation="vertical"
                    android:layout_margin="25dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="300dp"
                        android:padding="10dp"
                        android:layout_height="wrap_content"
                        android:text="@string/env_os_gratis_en_millones_de_productos_desde_149"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="320dp"
                            android:layout_height="90dp"
                            android:background="@drawable/resource_package"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:text="@string/adem_s_puedes_elegir_un_dia_de_la_semana_para_resibir_tus_compras_con"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/btndiscover">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subMeli"
                android:backgroundTint="@color/btndiscover"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/txttermy"
                android:text="@string/al_suscribirte_aceptas_los"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btndiscover"
                android:textSize="10sp"
                android:text="@string/t_rminos_y_condiciones_de_meli"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="10sp"
            android:textColor="@color/txttermy"
            android:text="@string/puedes_cancelar_cuando_quieras"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>