<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".directions">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/seed"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="15dp"
            android:background="@color/seed"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backHome"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/arrowleft"
                android:onClick="backHome" />

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navbar"
        tools:ignore="MissingConstraints">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/elige_d_nde_recibir_tus_compras"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navbar" />

    <TextView
        android:id="@+id/textView2"
        android:textStyle="normal"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/podr_s_ver_costos_y_tiempos_de_entrga_precisos_en_todo_lo_que_busques"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/en_una_de_tus_direcciones"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/directions"
        android:layout_width="410dp"
        android:layout_height="114dp"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <LinearLayout
            android:id="@+id/circleactive"
            android:layout_width="106dp"
            android:layout_height="67dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="50dp"
                android:src="@drawable/carboncirclefilled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/circleactive"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CP 50263"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Bravo-Instituto literario #20 - Toluca, Estado De México Rafael Murrieta - 7221234567"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="13dp"
            android:background="@color/background"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/circleactive"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:layout_width="199dp"
            android:layout_height="19dp"
            android:layout_marginStart="26dp"
            android:text="@string/editar_direcciones"
            android:textColor="@color/btndiscover"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/directions"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/titleubi"
        android:layout_width="200dp"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="13dp"
        android:text="@string/en_otra_ubicaci_n"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/titleubi"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/postal"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="37dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/pepiconspencilpinpointcircle" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/btndiscover"
                android:text="@string/ingresa_un_codigo_postal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:background="@color/background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/postal"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/btndiscover">

            <Button
                android:id="@+id/back"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btndiscover"
                android:text="@string/aceptar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>